# advent-of-code-2024

./: .gitignore
python/: Makefile  README.md  pyproject.toml
python/aoc2024/: day1.py  day2.py  day3.py  day4.py  day5.py  utils.py
python/tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py
