[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Advent of Code 2024 with Python 3.13."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]
